# ServerClientCpp

./: .gitignore  CMakeLists.txt  main2.cpp  server.h
client/: client.h
src/linux/: first_server.cpp
src/windows/: second_server.cpp
